--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data\\reduced_texas_df.csv\n"
+      "data\\reduced_texas_df.csv\n",
+      "data\\jared_reduced_texas_df.csv\n"
      ]
     }
    ],
    "source": [
     "csv_path = os.path.join(\"data\", \"reduced_texas_df.csv\")\n",
+    "csv2_path = os.path.join(\"data\", \"jared_reduced_texas_df.csv\")\n",
     "print(csv_path)\n",
-    "\n"
+    "print(csv2_path)\n"
    ]
   },
   {
@@ -251,7 +253,277 @@
    ],
    "source": [
     "texas_df = pd.read_csv(csv_path, encoding=\"utf-8\")\n",
-    "texas_df.head(5)"
+    "texas_df.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>TMC</th>\n",
+       "      <th>Severity</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>End_Time</th>\n",
+       "      <th>Weather_Condition</th>\n",
+       "      <th>Sunrise_Sunset</th>\n",
+       "      <th>Civil_Twilight</th>\n",
+       "      <th>Nautical_Twilight</th>\n",
+       "      <th>Astronomical_Twilight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>261002</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:03</td>\n",
+       "      <td>11/30/2016 17:20</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>261003</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:32</td>\n",
+       "      <td>11/30/2016 17:47</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>261004</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:31</td>\n",
+       "      <td>11/30/2016 17:46</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>261005</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:06</td>\n",
+       "      <td>11/30/2016 17:27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>261006</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16:35</td>\n",
+       "      <td>11/30/2016 17:49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID    TMC  Severity Unnamed: 3          End_Time Weather_Condition  \\\n",
+       "0  261002  201.0         2      16:03  11/30/2016 17:20             Clear   \n",
+       "1  261003  201.0         2      16:32  11/30/2016 17:47             Clear   \n",
+       "2  261004  201.0         2      16:31  11/30/2016 17:46             Clear   \n",
+       "3  261005  201.0         2      16:06  11/30/2016 17:27               NaN   \n",
+       "4  261006  201.0         3      16:35  11/30/2016 17:49               NaN   \n",
+       "\n",
+       "  Sunrise_Sunset Civil_Twilight Nautical_Twilight Astronomical_Twilight  \n",
+       "0            Day            Day               Day                   Day  \n",
+       "1            Day            Day               Day                   Day  \n",
+       "2            Day            Day               Day                   Day  \n",
+       "3            Day            Day               Day                   Day  \n",
+       "4            Day            Day               Day                   Day  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texas2_df = pd.read_csv(csv2_path, encoding=\"utf-8\")\n",
+    "\n",
+    "texas2_df.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>TMC</th>\n",
+       "      <th>Severity</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>End_Time</th>\n",
+       "      <th>Weather_Condition</th>\n",
+       "      <th>Sunrise_Sunset</th>\n",
+       "      <th>Civil_Twilight</th>\n",
+       "      <th>Nautical_Twilight</th>\n",
+       "      <th>Astronomical_Twilight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>261002</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:03</td>\n",
+       "      <td>11/30/2016 17:20</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>261003</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:32</td>\n",
+       "      <td>11/30/2016 17:47</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>261004</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:31</td>\n",
+       "      <td>11/30/2016 17:46</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>261005</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16:06</td>\n",
+       "      <td>11/30/2016 17:27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>261006</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16:35</td>\n",
+       "      <td>11/30/2016 17:49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID    TMC  Severity Unnamed: 3          End_Time Weather_Condition  \\\n",
+       "0  261002  201.0         2      16:03  11/30/2016 17:20             Clear   \n",
+       "1  261003  201.0         2      16:32  11/30/2016 17:47             Clear   \n",
+       "2  261004  201.0         2      16:31  11/30/2016 17:46             Clear   \n",
+       "3  261005  201.0         2      16:06  11/30/2016 17:27               NaN   \n",
+       "4  261006  201.0         3      16:35  11/30/2016 17:49               NaN   \n",
+       "\n",
+       "  Sunrise_Sunset Civil_Twilight Nautical_Twilight Astronomical_Twilight  \n",
+       "0            Day            Day               Day                   Day  \n",
+       "1            Day            Day               Day                   Day  \n",
+       "2            Day            Day               Day                   Day  \n",
+       "3            Day            Day               Day                   Day  \n",
+       "4            Day            Day               Day                   Day  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texas2_df.rename(columns={\"Unnamed: 3\":\"Start_Time\"})\n",
+    "texas2_df.head()"
    ]
   },
   {
