--- a/Hours Bar Plot.ipynb
+++ b/Hours Bar Plot.ipynb
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
     "plt.xlabel(\"Different Time Brackets\")\n",
     "plt.ylabel(\"Amount of Crashes Reported\")\n",
     "plt.ylim(0, max(hour_nums)+5000)\n",
-    "plt.savefig(\"data/fig1.png\")"
+    "plt.savefig(\"data/BarPlot.png\")"
    ]
   },
   {
