Made a separate notebook

--- a/TexasAccidentsBarplot.ipynb
+++ b/TexasAccidentsBarplot.ipynb
@@ -935,7 +935,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "I was assigned to look at the time of the accidents and "
+   ]
   }
  ],
  "metadata": {
