--- a/matts/pop_map.ipynb
+++ b/matts/pop_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4   99153       390.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3144,7 +3144,7 @@
        " ...]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3156,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3368,21 +3368,21 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# call texas DF for zipcodes and lat lng\n",
-    "texas_csvpath =('reduced_texas_df.csv')\n",
+    "texas_csvpath =('~/Desktop/reduced_texas_df.csv')\n",
     "texas_df = pd.read_csv(texas_csvpath)\n",
     "texas_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3409,7 +3409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3494,7 +3494,7 @@
        "4       76118  32.797668 -97.212090  Fort Worth    TX"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3507,7 +3507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3528,7 +3528,7 @@
        "Name: Zipcode, Length: 42054, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3541,7 +3541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3632,7 +3632,7 @@
        "4       76118  32.797668 -97.212090  Fort Worth    TX       76118"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3646,7 +3646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3797,7 +3797,7 @@
        "[1233 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3809,7 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3894,7 +3894,7 @@
        "4       76118  32.797668 -97.212090  Fort Worth    TX"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3907,7 +3907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3916,7 +3916,7 @@
        "Index(['New Zipcode', 'Start_Lat', 'Start_Lng', 'City', 'State'], dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3927,7 +3927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4012,7 +4012,7 @@
        "4   76118  32.797668 -97.212090  Fort Worth    TX"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4025,7 +4025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4116,7 +4116,7 @@
        "4   76118  32.797668 -97.212090  Fort Worth    TX     16002.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4129,7 +4129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4283,23 +4283,21 @@
        "[375972 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# clean zipcode df for map use and save csv for possible later use - \n",
-    "\n",
     "clean_texas_df = zipcode_df.dropna(how='any')\n",
     "clean_texas_df.to_csv(\"clean_texas_df.csv\", index=False)\n",
-    "\n",
     "clean_texas_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4311,13 +4309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5905c6aa67e244abbaaf0545d01e5094",
+       "model_id": "80df3719799b4b19ad1e477b140be511",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4342,7 +4340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4354,15 +4352,15 @@
        "78741    4045\n",
        "78744    4020\n",
        "         ... \n",
-       "76528       1\n",
+       "78355       1\n",
+       "79412       1\n",
+       "78588       1\n",
        "76878       1\n",
-       "75752       1\n",
-       "75844       1\n",
-       "78119       1\n",
+       "77335       1\n",
        "Name: Zipcode, Length: 1224, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4374,7 +4372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4441,7 +4439,7 @@
        "4   78744            4020"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4459,7 +4457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -4666,7 +4664,7 @@
        "69802   78660            2679  30.449717 -97.658142"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4682,7 +4680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4840,13 +4838,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92aab55e1c6f410483162a7cc3bf7146",
+       "model_id": "8bcf8c7c42224ed7a8730f80950e3b96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4869,13 +4867,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00f54be0302e4b79adff25ef8d82decc",
+       "model_id": "567669a97b8447189b8492e0684f2296",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4907,13 +4905,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4081d60f74f243969ce1182caaff6fa2",
+       "model_id": "5d443d673ad04fea8942ae659b329c7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4945,15 +4943,6 @@
     "fig.add_layer(heat_layer)\n",
     "plt.savefig('terrain_heat_zipcode_map.png', dpi=400)\n",
     "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# decide which hypothesis test to use and calculate\n"
    ]
   },
   {
