Added hypothesis and steps to NB

--- a/TexasAccidentsBarplot.ipynb
+++ b/TexasAccidentsBarplot.ipynb
@@ -936,7 +936,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I was assigned to look at the time of the accidents and "
+    "#I was assigned to look at the time of the accidents and see which time block has the most accidents. \n",
+    "#My hypothesis was that the early morning to morning time blocks would have the most accidents. \n",
+    "#I started with convert the \"Start_Time\" column of the orignal CSV file to \"Datetime\" format so pandas could read the data better.\n",
+    "#After converting the column I then pulled just the hour of the starting time so I could make bins for the time blocks.\n",
+    "#I needed whole numbers of the time to make the bins. I then procced to set the bin to \"Start_Time\" to get the value counts.\n",
+    "#I used the time blocks bins and the values of each one to create a barplot to compare the time blocks.\n",
+    "#My hypothesis was wrong, most of the accidents occured during the morning to day blocks in this data set. \n",
+    "\n"
    ]
   }
  ],
