--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as mpl\n",
-    "from imp import reload"
+    "import matplotlib.pyplot as plt\n",
+    "from imp import reload\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -277,7 +278,7 @@
     }
    ],
    "source": [
-    "bins = [1,2,3,4]\n",
+    "\n",
     "labels = \"[Severity, Precipitation]\"\n",
     "mpl.hist(texas_df[\"Severity\"], color=\"lightpink\", label=labels)\n",
     "mpl.xlabel(\"Severity\")\n",
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -305,18 +306,18 @@
    ],
    "source": [
     "\n",
-    "mpl.scatter(texas_df[\"Severity\"], texas_df[\"Precipitation(in)\"], c=texas_df[\"Visibility(mi)\"], marker=\"x\", alpha=0.3)\n",
+    "plt.scatter(texas_df[\"Severity\"], texas_df[\"Precipitation(in)\"], c=texas_df[\"Visibility(mi)\"], marker=\"x\", alpha=0.3)\n",
     "\n",
-    "mpl.xlabel(\"Severity\")\n",
-    "mpl.ylabel(\"Precipitation and Visibility\")\n",
-    "mpl.title(\"Severity vs. Precipitation with Visibility as Colors\")\n",
+    "plt.xlabel(\"Severity\")\n",
+    "plt.ylabel(\"Precipitation and Visibility\")\n",
+    "plt.title(\"Severity vs. Precipitation with Visibility as Colors\")\n",
     "\n",
-    "clb = mpl.colorbar()\n",
+    "clb = plt.colorbar()\n",
     "\n",
     "clb.set_label = (\"Visbility\")\n",
-    "mpl.grid()\n",
+    "plt.grid()\n",
     "\n",
-    "mpl.savefig(\"Severity_and_Dual_Weather_factors.png\")"
+    "plt.savefig(\"Severity_and_Dual_Weather_factors.png\")"
    ]
   },
   {
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -343,19 +344,24 @@
     }
    ],
    "source": [
+    "#Create number set, labels, and explode numbers\n",
     "counts = [1079, 273773, 96624, 4969]\n",
     "labels = \"Other\", \"Non-Incapacitating\", \"Incapacitating\", \"Fatal\"\n",
     "explode = (0.1, 0, 0, 0.3)\n",
     "\n",
-    "fig1, ax1 = mpl.subplots()\n",
+    "#Create Figure and Axis\n",
+    "fig1, ax1 = plt.subplots()\n",
     "\n",
+    "#Create pie chart with formatting\n",
     "ax1.pie(counts, explode=explode, labels=labels, autopct='%1.1f%%',\n",
     "        shadow=True, startangle=90, radius=.8)\n",
     "\n",
+    "#Equalize Axis and show plot\n",
     "ax1.axis('equal')\n",
-    "mpl.show\n",
+    "plt.show\n",
     "\n",
-    "mpl.savefig(\"Severity_pie_chart.png\")"
+    "#Save as png\n",
+    "plt.savefig(\"Severity_pie_chart.png\")"
    ]
   },
   {
@@ -382,6 +388,24 @@
     "print(\"Incapacitating - Crash resulted in passengers needing major attention at hospital - could not walk post-crash\")\n",
     "print(\"Fatal - One or more person from the crash died as a result of injuries sustained\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=nan, pvalue=nan)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
