renamed mats stuff to indicate it was the optional api work

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -464,6 +464,7 @@
     }
    ],
    "source": [
+    "#Agust Plot 2\n",
     "#Create number set, labels, and explode numbers\n",
     "counts = [1079, 273773, 96624, 4969]\n",
     "labels = \"Other\", \"Non-Incapacitating\", \"Incapacitating\", \"Fatal\"\n",
