added updated version of Anthony's notebook and a note to refer the grader to his notebook in the final_notebook

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -889,6 +889,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Anthony's plots can be found in the APJ-Project1-Dangerous Places.ipynb notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
